--- a/glide.yaml
+++ b/glide.yaml
@@ -20,3 +20,7 @@ import:
   version: ~0.0.1
 - package: github.com/blang/semver
   version: ~3.5.0
+- package: github.com/urfave/negroni
+  version: ^0.2.0
+- package: github.com/julienschmidt/httprouter
+  version: ^1.1.0
