--- a/glide.yaml
+++ b/glide.yaml
@@ -24,3 +24,5 @@ import:
   version: ^0.2.0
 - package: github.com/julienschmidt/httprouter
   version: ^1.1.0
+- package: github.com/boltdb/bolt
+  version: ^1.3.1
