--- a/glide.yaml
+++ b/glide.yaml
@@ -26,3 +26,5 @@ import:
   version: ^1.1.0
 - package: github.com/boltdb/bolt
   version: ^1.3.1
+- package: github.com/fortytw2/leaktest
+  version: ~1.1.0
