Basic terraform vendoring and scripts. No automated variable generation yet.

--- a/circle.yml
+++ b/circle.yml
@@ -2,16 +2,19 @@ version: 2
 defaults: &defaults
   working_directory: /go/src/github.com/apprenda/kismatic
   docker:
-    - image: golang:1.8
+    - image: golang:1.8.4
 
 jobs:
   build:
     <<: *defaults
     steps:
       - checkout
+      - run: 
+          name: Install unzip
+          command: apt update && apt install unzip
       - run:
           name: Unit tests
-          command: make TEST_OPTS="-v" bare-test
+          command: make bare-test
       - run:
           name: Verify gofmt
           command: diff -u <(echo -n) <(gofmt -d ./pkg ./cmd)
@@ -91,7 +94,6 @@ jobs:
               unzip ghr_v0.5.4_linux_amd64.zip
               ./ghr -draft -u "$CIRCLE_PROJECT_USERNAME" "${CIRCLE_TAG}-draft" release/
             fi
-
 deployment:
   fake_deploy_for_cci2:
     tag: /.*/
