--- a/glide.yaml
+++ b/glide.yaml
@@ -28,3 +28,7 @@ import:
   version: ^1.3.1
 - package: github.com/fortytw2/leaktest
   version: ~1.1.0
+- package: github.com/mholt/archiver
+  version: ^2.0.0
+  subpackages:
+  - cmd/archiver
