--- a/glide.yaml
+++ b/glide.yaml
@@ -32,3 +32,7 @@ import:
   version: ^2.0.0
   subpackages:
   - cmd/archiver
+- package: github.com/onsi/gomega
+  version: ~1.2.0
+- package: github.com/onsi/ginkgo
+  version: ~1.4.0
