--- a/glide.yaml
+++ b/glide.yaml
@@ -36,3 +36,7 @@ import:
   version: ~1.2.0
 - package: github.com/onsi/ginkgo
   version: ~1.4.0
+- package: github.com/google/go-cmp
+  version: ~0.1.0
+  subpackages:
+  - cmp
