--- a/ansible/roles/calico/templates/calico.yaml
+++ b/ansible/roles/calico/templates/calico.yaml
@@ -1,9 +1,9 @@
-# Calico Version v2.6.4
-# https://docs.projectcalico.org/v2.6/releases#v2.6.4
+# Calico Version v3.0.0
+# https://docs.projectcalico.org/v3.0/releases#v3.0.0
 # This manifest includes the following component versions:
-#   calico/node:v2.6.4
-#   calico/cni:v1.11.2
-#   calico/kube-controllers:v1.0.2
+#   calico/node:v3.0.0
+#   calico/cni:v2.0.0
+#   calico/kube-controllers:v2.0.0
 
 # This ConfigMap is used to configure a self-hosted Calico installation.
 kind: ConfigMap
@@ -68,6 +68,10 @@ spec:
   selector:
     matchLabels:
       k8s-app: calico-node
+  updateStrategy:
+    type: RollingUpdate
+    rollingUpdate:
+      maxUnavailable: 1
   template:
     metadata:
       labels:
