Updating the docker playbook to include the following:
 - Renamed daemon.json template file to devicemapper-daemon.json
 - Added a new overlay2-daemon.json template file

The overlay2-daemon.json is used when using RHEL 7.4 or Ubuntu 16 or higher.
The devicemapper-daemon.json is used with using RHEL 7.3, CentOS or Ubuntu versions less than 16.

--- a/ansible/roles/docker/tasks/main.yaml
+++ b/ansible/roles/docker/tasks/main.yaml
@@ -1,12 +1,35 @@
+# ######################################################################################################################
+# For more information on Docker storage drivers see:
+# https://docs.docker.com/engine/userguide/storagedriver/selectadriver/#supported-storage-drivers-per-linux-distribution
+# ######################################################################################################################
+
 ---
   - name: create /etc/docker directory
     file:
       path: /etc/docker
       state: directory
-  - name: write docker config file
+
+  # The overlay2 docker storage driver will be used for the following operating systems:
+  # - RHEL 7.4
+  # - Ubuntu 16 and higher.
+  - name: write overlay2 docker config file
     template:
-      src: daemon.json
+      src: overlay2-daemon.json
       dest: /etc/docker/daemon.json
+    when: (ansible_os_family == "RedHat" and ansible_distribution_version == '7.4') or
+          (ansible_distribution == "Ubuntu" and ansible_distribution_major_version >= '16')
+
+  # The devicemapper docker storage driver will be used for the following operating systems:
+  # - All RHEL versions other than 7.4,
+  # - All CentOS versions
+  # - All Ubuntu versions lower than 16.
+  - name: write devicemapper docker config file
+    template:
+      src: devicemapper-daemon.json
+      dest: /etc/docker/daemon.json
+    when: (ansible_os_family == "RedHat" and ansible_distribution_version != '7.4') or
+          (ansible_distribution == "Ubuntu" and ansible_distribution_major_version < '16')
+
   # start and verify that Docker installed successfully and is running
   - name: start docker service
     service:
